# powerstrip-control

./: Cargo.toml  justfile
src/: lib.rs  main.rs
