[package]
name = "powerstrip-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.108", features = [] }
serde = { version = "1.0.193", features = ["derive"] }
byteorder = "1.5.0"
anyhow = "1.0.76"
encoding = "0.2.33"
bincode = "1.3.3"
